# shogi-arena-agent

./: .gitignore  AGENTS.md  AGENTS.override.md  README.md  pyproject.toml
docs/: shogi-generation.md
issues/: batched-mcts-cpu-bottleneck.md  batched-mcts-expand-overhead.md  batched-mcts-selection-overhead.md  checkpoint-policy-cli-name-boundary.md  external-player-lifetime.md  match-evaluation-responsibility.md  runpod-runner-dependency-boundary.md  shogi-arena-intrep-test-boundary.md  shogi-player-spec-cli-naming.md  usi-process-stderr-handling.md  usi-runtime-configuration-provenance.md  usi-search-metadata.md
issues/closed/: batched-mcts-selection-overhead.md  checkpoint-move-selector-cli-name-boundary.md  (+4 more)
scripts/: analyze_shogi_positions_with_usi_engine.py  analyze_shogi_positions_with_yaneuraou.py  annotate_shogi_records_with_yaneuraou_multipv.py  evaluate_checkpoint_vs_yaneuraou.py  evaluate_shogi_players.py  generate_checkpoint_games.py  generate_shogi_games.py  runpod_evaluate_checkpoint_vs_yaneuraou.sh  runpod_shogi_player_matches.sh  runpod_yaneuraou_mcts_sweep.sh  summarize_shogi_match_sweep.py
tests/: test_analyze_shogi_positions_script.py  test_annotate_shogi_records_script.py  test_baseline_policy.py  test_deterministic_legal_policy.py  test_evaluate_shogi_players_script.py  test_generate_checkpoint_games_script.py  test_generate_shogi_games_script.py  test_local_match.py  test_main.py  test_match_evaluation.py  test_mcts.py  test_model_policy.py  test_multipv_policy.py  test_package.py  test_shogi_game.py  test_usi.py  test_usi_process.py
(+22 files in other folders)
