[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "shogi-arena-agent"
version = "0.1.0"
description = "Runtime wrappers for connecting shogi models to external arenas."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
